[package]
name = "imgpull"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
argh = "0.1.12"
kdam = "0.6.0"
native-tls = "0.2.12"
once_cell = "1.20.2"
serde_json = "1.0.133"
sha2 = "0.10.8"
tar = {version = "0.4.43",default-features = false }
ureq = {version = "2", default-features = false , features = ["native-tls",  "gzip", "json"] }
